--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,8 +9,27 @@
     <style>
       body {
         font-family: "open sans";
-        font-weight: 700;
+        font-weight: 600;
         margin: 0;
+      }
+      ::-webkit-scrollbar {
+        width: 10px;
+        background: #555;
+      }
+
+      /* Track */
+      ::-webkit-scrollbar-track {
+        background: #aaa;
+      }
+
+      /* Handle */
+      ::-webkit-scrollbar-thumb {
+        background: #555;
+      }
+
+      /* Handle on hover */
+      ::-webkit-scrollbar-thumb:hover {
+        background: #555;
       }
     </style>
   </head>
